# dungeon-service

./: .gitignore  CLAUDE.md  Dockerfile  README.md  makefile  pyproject.toml
db/migrations/: V1__initial_schema.sql  V2__message_history.sql  V2__seed_test_data.sql
db/seeds/: R__seed_data.sql
docs/: architecture.md
docs/plans/: 2026-02-21-local-llm-mock-design.md  2026-02-21-local-llm-mock.md  2026-02-27-gameplay-loop.md  2026-02-27-infra-cicd.md  2026-02-27-replace-mock-llm-design.md  2026-02-27-replace-mock-llm.md
docs/superpowers/specs/: 2026-03-21-checkpoint-progression-design.md  2026-03-27-campaign-memory-design.md
infra/local/: docker-compose.yml
src/: main.py
src/api/: auth.py  campaigns.py  characters.py  dependencies.py
src/config/: __init__.py  config.py
src/db/: db.py
src/models/: campaign.py  character.py  memory.py  message_history.py  turn.py  user.py
src/services/: auth_service.py  campaign_service.py  character_service.py  dm_agent.py  embedding_service.py  mock_llm.py  prompts.py  turn_service.py
src/tools/: campaign_tools.py
tests/: helpers.py  test_campaign_service.py  test_campaigns.py  test_character_service.py  test_characters.py  test_dm_agent.py  test_dm_agent_client.py  test_mock_llm.py
